# wavelet_ice

./: .gitignore  README.md  pyproject.toml
src/: main.py  view_meta.py  wavelet_bump.py  wavelet_morlet_linear.py
src/data_processing/baseline/: convert_in_png.py  convert_npy_into_png.py  create_spectrogram.py  extract_energy.py
src/data_processing/tools/: evaluations.py  loaders.py  vision.py  viz.py
src/data_processing/wavelet/: main.py  make_png.py  morlet.py  wavelet_morlet_linear.py
src/data_processing/wavelet/tools/: dsp.py
src/helpers/: parser.py
