[project]
name = "wavelet_ice"
version = "0.1.0"
description = "wavelet project's repository for ICE mention at CentraleSupélec"
readme = "README.md"
authors = [
    { name = "Antoine Hanachowicz", email = "antoine.hanachowicz@outlook.com" },
    { name = "Baptiste Guido", email = "baptisteguidoprepa@gmail.com"}
]
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "scipy",
    "torch",
    "matplotlib",
    "opencv-python",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]